cs22b046_lab8/y.output
Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt_list M stmt
    3          | stmt

    4 stmt: expr ASSIGN expr ';'
    5     | IF '(' expr ')' M stmt
    6     | IF '(' expr ')' M stmt ELSE N M stmt
    7     | LB stmt_list RB
    8     | LB RB
    9     | WHILE M '(' expr ')' M stmt
   10     | IF '(' ')'
   11     | expr ';'
   12     | error

   13 ASSIGN: EQ
   14       | PEQ
   15       | MEQ
   16       | MLEQ
   17       | DEQ

   18 expr: expr '+' expr
   19     | expr '-' expr
   20     | expr '*' expr
   21     | expr '/' expr
   22     | expr '%' expr
   23     | '(' expr ')'
   24     | expr GT expr
   25     | expr LT expr
   26     | expr GTE expr
   27     | expr LTE expr
   28     | expr NE expr
   29     | expr EE expr
   30     | expr AND M expr
   31     | expr OR N expr
   32     | NN expr
   33     | '(' expr error
   34     | term
   35     | T
   36     | F

   37 N: ε

   38 M: ε

   39 term: UM IDENTIFIER
   40     | UM DOUBLE IDENTIFIER
   41     | UM IDENTIFIER DOUBLE
   42     | UM NUMBER
   43     | UM DOUBLE IDENTIFIER DOUBLE
   44     | UM PP NUMBER
   45     | UM MM NUMBER
   46     | UM NUMBER PP
   47     | UM NUMBER MM
   48     | UM DOUBLE IDENTIFIER IDENTIFIER
   49     | UM IDENTIFIER DOUBLE IDENTIFIER
   50     | UM DOUBLE IDENTIFIER NUMBER
   51     | UM IDENTIFIER DOUBLE NUMBER
   52     | UM NUMBER IDENTIFIER
   53     | UM IDENTIFIER NUMBER
   54     | UM IDENTIFIER DOUBLE DOUBLE

   55 UM: '-'
   56   | ε

   57 DOUBLE: PP
   58       | MM


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 22
    '(' (40) 5 6 9 10 23 33
    ')' (41) 5 6 9 10 23
    '*' (42) 20
    '+' (43) 18
    '-' (45) 19 55
    '/' (47) 21
    ';' (59) 4 11
    error (256) 12 33
    IDENTIFIER <value> (258) 39 40 41 43 48 49 50 51 52 53 54
    NUMBER <value> (259) 42 44 45 46 47 50 51 52 53
    EQ <value> (260) 13
    PEQ <value> (261) 14
    MEQ <value> (262) 15
    MLEQ <value> (263) 16
    DEQ <value> (264) 17
    MM <value> (265) 45 47 58
    PP <value> (266) 44 46 57
    LB <value> (267) 7 8
    RB <value> (268) 7 8
    GT <value> (269) 24
    LT <value> (270) 25
    GTE <value> (271) 26
    LTE <value> (272) 27
    NE <value> (273) 28
    EE <value> (274) 29
    AND <value> (275) 30
    OR <value> (276) 31
    IF <value> (277) 5 6 10
    ELSE <value> (278) 6
    T <value> (279) 35
    F <value> (280) 36
    WHILE <value> (281) 9
    NN <value> (282) 32


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    program (37)
        on left: 1
        on right: 0
    stmt_list <node> (38)
        on left: 2 3
        on right: 1 2 7
    stmt <node> (39)
        on left: 4 5 6 7 8 9 10 11 12
        on right: 2 3 5 6 9
    ASSIGN <node> (40)
        on left: 13 14 15 16 17
        on right: 4
    expr <node> (41)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 4 5 6 9 11 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33
    N <instr> (42)
        on left: 37
        on right: 6 31
    M <instr> (43)
        on left: 38
        on right: 2 5 6 9 30
    term <node> (44)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
        on right: 34
    UM <node> (45)
        on left: 55 56
        on right: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    DOUBLE <node> (46)
        on left: 57 58
        on right: 40 41 43 48 49 50 51 54


State 0

    0 $accept: • program $end

    error  shift, and go to state 1
    LB     shift, and go to state 2
    IF     shift, and go to state 3
    T      shift, and go to state 4
    F      shift, and go to state 5
    WHILE  shift, and go to state 6
    NN     shift, and go to state 7
    '-'    shift, and go to state 8
    '('    shift, and go to state 9

    IDENTIFIER  reduce using rule 56 (UM)
    NUMBER      reduce using rule 56 (UM)
    MM          reduce using rule 56 (UM)
    PP          reduce using rule 56 (UM)

    program    go to state 10
    stmt_list  go to state 11
    stmt       go to state 12
    expr       go to state 13
    term       go to state 14
    UM         go to state 15


State 1

   12 stmt: error •

    $default  reduce using rule 12 (stmt)


State 2

    7 stmt: LB • stmt_list RB
    8     | LB • RB

    error  shift, and go to state 1
    LB     shift, and go to state 2
    RB     shift, and go to state 16
    IF     shift, and go to state 3
    T      shift, and go to state 4
    F      shift, and go to state 5
    WHILE  shift, and go to state 6
    NN     shift, and go to state 7
    '-'    shift, and go to state 8
    '('    shift, and go to state 9

    IDENTIFIER  reduce using rule 56 (UM)
    NUMBER      reduce using rule 56 (UM)
    MM          reduce using rule 56 (UM)
    PP          reduce using rule 56 (UM)

    stmt_list  go to state 17
    stmt       go to state 12
    expr       go to state 13
    term       go to state 14
    UM         go to state 15


State 3

    5 stmt: IF • '(' expr ')' M stmt
    6     | IF • '(' expr ')' M stmt ELSE N M stmt
   10     | IF • '(' ')'

    '('  shift, and go to state 18


State 4

   35 expr: T •

    $default  reduce using rule 35 (expr)


State 5

   36 expr: F •

    $default  reduce using rule 36 (expr)


State 6

    9 stmt: WHILE • M '(' expr ')' M stmt

    $default  reduce using rule 38 (M)

    M  go to state 19


State 7

   32 expr: NN • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 20
    term  go to state 14
    UM    go to state 15


State 8

   55 UM: '-' •

    $default  reduce using rule 55 (UM)


State 9

   23 expr: '(' • expr ')'
   33     | '(' • expr error

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 21
    term  go to state 14
    UM    go to state 15


State 10

    0 $accept: program • $end

    $end  shift, and go to state 22


State 11

    1 program: stmt_list •
    2 stmt_list: stmt_list • M stmt

    $end      reduce using rule 1 (program)
    $default  reduce using rule 38 (M)

    M  go to state 23


State 12

    3 stmt_list: stmt •

    $default  reduce using rule 3 (stmt_list)


State 13

    4 stmt: expr • ASSIGN expr ';'
   11     | expr • ';'
   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    EQ    shift, and go to state 24
    PEQ   shift, and go to state 25
    MEQ   shift, and go to state 26
    MLEQ  shift, and go to state 27
    DEQ   shift, and go to state 28
    GT    shift, and go to state 29
    LT    shift, and go to state 30
    GTE   shift, and go to state 31
    LTE   shift, and go to state 32
    NE    shift, and go to state 33
    EE    shift, and go to state 34
    AND   shift, and go to state 35
    OR    shift, and go to state 36
    '+'   shift, and go to state 37
    '-'   shift, and go to state 38
    '*'   shift, and go to state 39
    '/'   shift, and go to state 40
    '%'   shift, and go to state 41
    ';'   shift, and go to state 42

    ASSIGN  go to state 43


State 14

   34 expr: term •

    $default  reduce using rule 34 (expr)


State 15

   39 term: UM • IDENTIFIER
   40     | UM • DOUBLE IDENTIFIER
   41     | UM • IDENTIFIER DOUBLE
   42     | UM • NUMBER
   43     | UM • DOUBLE IDENTIFIER DOUBLE
   44     | UM • PP NUMBER
   45     | UM • MM NUMBER
   46     | UM • NUMBER PP
   47     | UM • NUMBER MM
   48     | UM • DOUBLE IDENTIFIER IDENTIFIER
   49     | UM • IDENTIFIER DOUBLE IDENTIFIER
   50     | UM • DOUBLE IDENTIFIER NUMBER
   51     | UM • IDENTIFIER DOUBLE NUMBER
   52     | UM • NUMBER IDENTIFIER
   53     | UM • IDENTIFIER NUMBER
   54     | UM • IDENTIFIER DOUBLE DOUBLE

    IDENTIFIER  shift, and go to state 44
    NUMBER      shift, and go to state 45
    MM          shift, and go to state 46
    PP          shift, and go to state 47

    DOUBLE  go to state 48


State 16

    8 stmt: LB RB •

    $default  reduce using rule 8 (stmt)


State 17

    2 stmt_list: stmt_list • M stmt
    7 stmt: LB stmt_list • RB

    RB  shift, and go to state 49

    $default  reduce using rule 38 (M)

    M  go to state 23


State 18

    5 stmt: IF '(' • expr ')' M stmt
    6     | IF '(' • expr ')' M stmt ELSE N M stmt
   10     | IF '(' • ')'

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9
    ')'  shift, and go to state 50

    $default  reduce using rule 56 (UM)

    expr  go to state 51
    term  go to state 14
    UM    go to state 15


State 19

    9 stmt: WHILE M • '(' expr ')' M stmt

    '('  shift, and go to state 52


State 20

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr
   32     | NN expr •

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32

    $default  reduce using rule 32 (expr)


State 21

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   23     | '(' expr • ')'
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr
   33     | '(' expr • error

    error  shift, and go to state 53
    GT     shift, and go to state 29
    LT     shift, and go to state 30
    GTE    shift, and go to state 31
    LTE    shift, and go to state 32
    NE     shift, and go to state 33
    EE     shift, and go to state 34
    AND    shift, and go to state 35
    OR     shift, and go to state 36
    '+'    shift, and go to state 37
    '-'    shift, and go to state 38
    '*'    shift, and go to state 39
    '/'    shift, and go to state 40
    '%'    shift, and go to state 41
    ')'    shift, and go to state 54


State 22

    0 $accept: program $end •

    $default  accept


State 23

    2 stmt_list: stmt_list M • stmt

    error  shift, and go to state 1
    LB     shift, and go to state 2
    IF     shift, and go to state 3
    T      shift, and go to state 4
    F      shift, and go to state 5
    WHILE  shift, and go to state 6
    NN     shift, and go to state 7
    '-'    shift, and go to state 8
    '('    shift, and go to state 9

    IDENTIFIER  reduce using rule 56 (UM)
    NUMBER      reduce using rule 56 (UM)
    MM          reduce using rule 56 (UM)
    PP          reduce using rule 56 (UM)

    stmt  go to state 55
    expr  go to state 13
    term  go to state 14
    UM    go to state 15


State 24

   13 ASSIGN: EQ •

    $default  reduce using rule 13 (ASSIGN)


State 25

   14 ASSIGN: PEQ •

    $default  reduce using rule 14 (ASSIGN)


State 26

   15 ASSIGN: MEQ •

    $default  reduce using rule 15 (ASSIGN)


State 27

   16 ASSIGN: MLEQ •

    $default  reduce using rule 16 (ASSIGN)


State 28

   17 ASSIGN: DEQ •

    $default  reduce using rule 17 (ASSIGN)


State 29

   24 expr: expr GT • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 56
    term  go to state 14
    UM    go to state 15


State 30

   25 expr: expr LT • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 57
    term  go to state 14
    UM    go to state 15


State 31

   26 expr: expr GTE • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 58
    term  go to state 14
    UM    go to state 15


State 32

   27 expr: expr LTE • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 59
    term  go to state 14
    UM    go to state 15


State 33

   28 expr: expr NE • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 60
    term  go to state 14
    UM    go to state 15


State 34

   29 expr: expr EE • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 61
    term  go to state 14
    UM    go to state 15


State 35

   30 expr: expr AND • M expr

    $default  reduce using rule 38 (M)

    M  go to state 62


State 36

   31 expr: expr OR • N expr

    $default  reduce using rule 37 (N)

    N  go to state 63


State 37

   18 expr: expr '+' • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 64
    term  go to state 14
    UM    go to state 15


State 38

   19 expr: expr '-' • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 65
    term  go to state 14
    UM    go to state 15


State 39

   20 expr: expr '*' • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 66
    term  go to state 14
    UM    go to state 15


State 40

   21 expr: expr '/' • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 67
    term  go to state 14
    UM    go to state 15


State 41

   22 expr: expr '%' • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 68
    term  go to state 14
    UM    go to state 15


State 42

   11 stmt: expr ';' •

    $default  reduce using rule 11 (stmt)


State 43

    4 stmt: expr ASSIGN • expr ';'

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 69
    term  go to state 14
    UM    go to state 15


State 44

   39 term: UM IDENTIFIER •
   41     | UM IDENTIFIER • DOUBLE
   49     | UM IDENTIFIER • DOUBLE IDENTIFIER
   51     | UM IDENTIFIER • DOUBLE NUMBER
   53     | UM IDENTIFIER • NUMBER
   54     | UM IDENTIFIER • DOUBLE DOUBLE

    NUMBER  shift, and go to state 70
    MM      shift, and go to state 71
    PP      shift, and go to state 72

    $default  reduce using rule 39 (term)

    DOUBLE  go to state 73


State 45

   42 term: UM NUMBER •
   46     | UM NUMBER • PP
   47     | UM NUMBER • MM
   52     | UM NUMBER • IDENTIFIER

    IDENTIFIER  shift, and go to state 74
    MM          shift, and go to state 75
    PP          shift, and go to state 76

    $default  reduce using rule 42 (term)


State 46

   45 term: UM MM • NUMBER
   58 DOUBLE: MM •

    NUMBER  shift, and go to state 77

    $default  reduce using rule 58 (DOUBLE)


State 47

   44 term: UM PP • NUMBER
   57 DOUBLE: PP •

    NUMBER  shift, and go to state 78

    $default  reduce using rule 57 (DOUBLE)


State 48

   40 term: UM DOUBLE • IDENTIFIER
   43     | UM DOUBLE • IDENTIFIER DOUBLE
   48     | UM DOUBLE • IDENTIFIER IDENTIFIER
   50     | UM DOUBLE • IDENTIFIER NUMBER

    IDENTIFIER  shift, and go to state 79


State 49

    7 stmt: LB stmt_list RB •

    $default  reduce using rule 7 (stmt)


State 50

   10 stmt: IF '(' ')' •

    $default  reduce using rule 10 (stmt)


State 51

    5 stmt: IF '(' expr • ')' M stmt
    6     | IF '(' expr • ')' M stmt ELSE N M stmt
   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34
    AND  shift, and go to state 35
    OR   shift, and go to state 36
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    '%'  shift, and go to state 41
    ')'  shift, and go to state 80


State 52

    9 stmt: WHILE M '(' • expr ')' M stmt

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 81
    term  go to state 14
    UM    go to state 15


State 53

   33 expr: '(' expr error •

    $default  reduce using rule 33 (expr)


State 54

   23 expr: '(' expr ')' •

    $default  reduce using rule 23 (expr)


State 55

    2 stmt_list: stmt_list M stmt •

    $default  reduce using rule 2 (stmt_list)


State 56

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   24     | expr GT expr •
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   error (nonassociative)
    LT   error (nonassociative)
    GTE  error (nonassociative)
    LTE  error (nonassociative)

    $default  reduce using rule 24 (expr)


State 57

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   25     | expr LT expr •
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   error (nonassociative)
    LT   error (nonassociative)
    GTE  error (nonassociative)
    LTE  error (nonassociative)

    $default  reduce using rule 25 (expr)


State 58

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   26     | expr GTE expr •
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   error (nonassociative)
    LT   error (nonassociative)
    GTE  error (nonassociative)
    LTE  error (nonassociative)

    $default  reduce using rule 26 (expr)


State 59

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   27     | expr LTE expr •
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   error (nonassociative)
    LT   error (nonassociative)
    GTE  error (nonassociative)
    LTE  error (nonassociative)

    $default  reduce using rule 27 (expr)


State 60

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   28     | expr NE expr •
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32

    NE  error (nonassociative)
    EE  error (nonassociative)

    $default  reduce using rule 28 (expr)


State 61

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   29     | expr EE expr •
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32

    NE  error (nonassociative)
    EE  error (nonassociative)

    $default  reduce using rule 29 (expr)


State 62

   30 expr: expr AND M • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 82
    term  go to state 14
    UM    go to state 15


State 63

   31 expr: expr OR N • expr

    T    shift, and go to state 4
    F    shift, and go to state 5
    NN   shift, and go to state 7
    '-'  shift, and go to state 8
    '('  shift, and go to state 9

    $default  reduce using rule 56 (UM)

    expr  go to state 83
    term  go to state 14
    UM    go to state 15


State 64

   18 expr: expr • '+' expr
   18     | expr '+' expr •
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34
    AND  shift, and go to state 35
    OR   shift, and go to state 36
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    '%'  shift, and go to state 41

    $default  reduce using rule 18 (expr)


State 65

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   19     | expr '-' expr •
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34
    AND  shift, and go to state 35
    OR   shift, and go to state 36
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    '%'  shift, and go to state 41

    $default  reduce using rule 19 (expr)


State 66

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   20     | expr '*' expr •
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34
    AND  shift, and go to state 35
    OR   shift, and go to state 36

    $default  reduce using rule 20 (expr)


State 67

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   21     | expr '/' expr •
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34
    AND  shift, and go to state 35
    OR   shift, and go to state 36

    $default  reduce using rule 21 (expr)


State 68

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   22     | expr '%' expr •
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34
    AND  shift, and go to state 35
    OR   shift, and go to state 36

    $default  reduce using rule 22 (expr)


State 69

    4 stmt: expr ASSIGN expr • ';'
   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34
    AND  shift, and go to state 35
    OR   shift, and go to state 36
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    '%'  shift, and go to state 41
    ';'  shift, and go to state 84


State 70

   53 term: UM IDENTIFIER NUMBER •

    $default  reduce using rule 53 (term)


State 71

   58 DOUBLE: MM •

    $default  reduce using rule 58 (DOUBLE)


State 72

   57 DOUBLE: PP •

    $default  reduce using rule 57 (DOUBLE)


State 73

   41 term: UM IDENTIFIER DOUBLE •
   49     | UM IDENTIFIER DOUBLE • IDENTIFIER
   51     | UM IDENTIFIER DOUBLE • NUMBER
   54     | UM IDENTIFIER DOUBLE • DOUBLE

    IDENTIFIER  shift, and go to state 85
    NUMBER      shift, and go to state 86
    MM          shift, and go to state 71
    PP          shift, and go to state 72

    $default  reduce using rule 41 (term)

    DOUBLE  go to state 87


State 74

   52 term: UM NUMBER IDENTIFIER •

    $default  reduce using rule 52 (term)


State 75

   47 term: UM NUMBER MM •

    $default  reduce using rule 47 (term)


State 76

   46 term: UM NUMBER PP •

    $default  reduce using rule 46 (term)


State 77

   45 term: UM MM NUMBER •

    $default  reduce using rule 45 (term)


State 78

   44 term: UM PP NUMBER •

    $default  reduce using rule 44 (term)


State 79

   40 term: UM DOUBLE IDENTIFIER •
   43     | UM DOUBLE IDENTIFIER • DOUBLE
   48     | UM DOUBLE IDENTIFIER • IDENTIFIER
   50     | UM DOUBLE IDENTIFIER • NUMBER

    IDENTIFIER  shift, and go to state 88
    NUMBER      shift, and go to state 89
    MM          shift, and go to state 71
    PP          shift, and go to state 72

    $default  reduce using rule 40 (term)

    DOUBLE  go to state 90


State 80

    5 stmt: IF '(' expr ')' • M stmt
    6     | IF '(' expr ')' • M stmt ELSE N M stmt

    $default  reduce using rule 38 (M)

    M  go to state 91


State 81

    9 stmt: WHILE M '(' expr • ')' M stmt
   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34
    AND  shift, and go to state 35
    OR   shift, and go to state 36
    '+'  shift, and go to state 37
    '-'  shift, and go to state 38
    '*'  shift, and go to state 39
    '/'  shift, and go to state 40
    '%'  shift, and go to state 41
    ')'  shift, and go to state 92


State 82

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   30     | expr AND M expr •
   31     | expr • OR N expr

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34

    $default  reduce using rule 30 (expr)


State 83

   18 expr: expr • '+' expr
   19     | expr • '-' expr
   20     | expr • '*' expr
   21     | expr • '/' expr
   22     | expr • '%' expr
   24     | expr • GT expr
   25     | expr • LT expr
   26     | expr • GTE expr
   27     | expr • LTE expr
   28     | expr • NE expr
   29     | expr • EE expr
   30     | expr • AND M expr
   31     | expr • OR N expr
   31     | expr OR N expr •

    GT   shift, and go to state 29
    LT   shift, and go to state 30
    GTE  shift, and go to state 31
    LTE  shift, and go to state 32
    NE   shift, and go to state 33
    EE   shift, and go to state 34
    AND  shift, and go to state 35

    $default  reduce using rule 31 (expr)


State 84

    4 stmt: expr ASSIGN expr ';' •

    $default  reduce using rule 4 (stmt)


State 85

   49 term: UM IDENTIFIER DOUBLE IDENTIFIER •

    $default  reduce using rule 49 (term)


State 86

   51 term: UM IDENTIFIER DOUBLE NUMBER •

    $default  reduce using rule 51 (term)


State 87
